--- a/cdb/project-pull-requests.json
+++ b/cdb/project-pull-requests.json
@@ -1,7 +1,7 @@
 {
     "name": "loancalculator-pull-requests",
     "description": "The loan calculator application",
-    "owner": "cern",
+    "owner": "meekrosoft",
     "template": [
         "artifact",
         "test",
