Switch to public server

--- a/cdb/project-master.json
+++ b/cdb/project-master.json
@@ -2,6 +2,7 @@
     "name": "loancalculator",
     "description": "The loan calculator application",
     "owner": "meekrosoft",
+    "visibility": "public",
     "template": [
         "artifact",
         "test",
