Add pull request visibility

--- a/cdb/project-pull-requests.json
+++ b/cdb/project-pull-requests.json
@@ -2,6 +2,7 @@
     "name": "loancalculator-pull-requests",
     "description": "The loan calculator application",
     "owner": "meekrosoft",
+    "visibility": "public",
     "template": [
         "artifact",
         "test",
