--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,11 @@ jobs:
           make docker_push
           make merkely_declare_pipeline
           make merkely_log_artifact
+
+      - name: Run test suite
+        env:
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_CI_BUILD_URL: https://github.com/compliancedb/cdb_controls/actions/runs/${GITHUB_RUN_ID}
+        run: |
+          make test
+          make merkely_log_test
