--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,12 @@ jobs:
         run: |
           make test
           make merkely_log_test
+
+      - name: Deploy to STAGE
+        env:
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          MERKELY_ENVIRONMENT: staging
+        run: |
+          echo dummy staging deploy
+          make merkely_log_deployment
