--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   production-deploy:
+
+
     # This is a manually triggered workflow to deploy to production
     # Runs from production branch
     # Do deploy
@@ -12,6 +14,10 @@ jobs:
     # Merge with master
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: production
+
     - env:
         MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
