Clone full repository in production deployment

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        # fetch full history
+        fetch-depth: 0
         ref: ${{ github.event.inputs.deploy_commit }}
 
     - env:
