--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,16 @@ jobs:
           make security
           make merkely_log_test
 
+      - name: Run coverage
+        env:
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          MERKELY_TEST_TYPE: coverage
+        run: |
+          make coverage
+          source build/coverage/coverage_summary.sh
+          make merkely_log_coverage
+
       - name: Deploy to STAGE
         env:
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
