--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,10 +58,12 @@ jobs:
 
       - name: Run security analysis
         env:
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
+          MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
           MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_TEST_TYPE: security
-          MERKELY_TEST_RESULTS: build/security/security.xml
+          MERKELY_EVIDENCE_TYPE: security
+          MERKELY_TEST_RESULTS_FILE: build/security/security.xml
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make security
           make merkely_log_test
