--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,11 @@ jobs:
 
       - name: Run test suite
         env:
+          MERKELY_EVIDENCE_TYPE: unit_test
+          MERKELY_TEST_RESULTS_FILE: build/test/pytest_unit.xml
           TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
           MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
           MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_EVIDENCE_TYPE: unit_test
-          MERKELY_TEST_RESULTS_FILE: build/test/pytest_unit.xml
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make test
@@ -58,11 +58,11 @@ jobs:
 
       - name: Run security analysis
         env:
+          MERKELY_EVIDENCE_TYPE: security
+          MERKELY_TEST_RESULTS_FILE: build/security/security.xml
           TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
           MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
           MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_EVIDENCE_TYPE: security
-          MERKELY_TEST_RESULTS_FILE: build/security/security.xml
           MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make security
@@ -70,21 +70,26 @@ jobs:
 
       - name: Run coverage
         env:
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
+          MERKELY_EVIDENCE_TYPE: coverage
+          TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
+          MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
           MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-          MERKELY_TEST_TYPE: coverage
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           make coverage
           source build/coverage/coverage_summary.sh
           export COVERAGE_SUMMARY=$COVERAGE_SUMMARY
           make merkely_log_coverage
+          #make merkely_log_evidence
 
       - name: Deploy to STAGE
         env:
-          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
+          MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
           MERKELY_ENVIRONMENT: staging
           MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
+          MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+          MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
         run: |
           echo YOUR DEPLOYMENT COMMAND HERE
           make merkely_log_deployment
