--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -26,16 +26,22 @@ jobs:
 
 
     - env:
-        MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-        MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-        MERKELY_ENVIRONMENT: production
-        MERKELY_DESCRIPTION: "Approval created by ${GITHUB_ACTOR} on github"
+        TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
+        MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
         MERKELY_TARGET_SOURCE_COMMITISH: ${{ github.event.inputs.deploy_commit }}
         MERKELY_BASE_SOURCE_COMMITISH: origin/production
+        # MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+        # MERKELY_ENVIRONMENT: production
+        MERKELY_DESCRIPTION: "Approval created by ${GITHUB_ACTOR} on github"
         MERKELY_IS_APPROVED_EXTERNALLY: "TRUE"
+        MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
       run: |
         make docker_pull
         make merkely_create_approval
+        echo '------'
+        echo ":${MERKELY_FINGERPRINT}:
+        # make merkely_log_approval   ?
+        # DROP MERKELY_IS_APPROVED_EXTERNALLY ?
 
 
 
