Add missing quote to trace echo in .github/workflows/approval.yml

--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -39,7 +39,7 @@ jobs:
         make docker_pull
         make merkely_create_approval
         echo '------'
-        echo ":${MERKELY_FINGERPRINT}:
+        echo ":${MERKELY_FINGERPRINT}:"
         # make merkely_log_approval   ?
         # DROP MERKELY_IS_APPROVED_EXTERNALLY ?
 
