Switch .github/workflows/deploy_to_production.yml to new merkely_control_deployment Makefile target

--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -23,14 +23,21 @@ jobs:
         fetch-depth: 0
         ref: ${{ github.event.inputs.deploy_commit }}
 
+    - name: Make Docker image name available for following steps
+      id: tagged_image
+      run: |
+        echo ::set-output name=value::merkely/loancalculator:$(git log -1 --pretty=%h)
+
+
     - env:
-        MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
-        MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
-        MERKELY_ENVIRONMENT: production
+        TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
+        MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
         MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
+        MERKELY_ENVIRONMENT: production
+        MERKELY_CI_BUILD_URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+        MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
       run: |
         make docker_pull
-
         make merkely_control_deployment
         echo YOUR DEPLOYMENT COMMAND HERE
 
