--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -26,11 +26,10 @@ jobs:
     - name: Make Docker image name available for following steps
       id: tagged_image
       run: |
-        echo ::set-output name=value::merkely/loancalculator:$(git log -1 --pretty=%h)
+        echo "TAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
 
 
     - env:
-        TAGGED_IMAGE: ${{ steps.tagged_image.outputs.value }}
         MERKELY_FINGERPRINT: docker://${TAGGED_IMAGE}
         MERKELY_DESCRIPTION: "Deployed to ${MERKELY_ENVIRONMENT} in pipeline"
         MERKELY_ENVIRONMENT: production
