--- a/.github/workflows/create_approval.yml
+++ b/.github/workflows/create_approval.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Make Docker image name available for following step
       run: |
         echo "TAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
+        echo "UNTAGGED_IMAGE=${{ secrets.DOCKERHUB_REPO_OWNER }}/loancalculator" >> ${GITHUB_ENV}
 
 
     - env:
