Fix missing env-var in declare_pipeline inlined into .yml

--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -27,7 +27,7 @@ jobs:
           docker run --rm \
               --env MERKELY_COMMAND=declare_pipeline \
               --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN} \
-              --volume ${PWD}/${MERKELYPIPE}:/data/Merkelypipe.json \
+              --volume ${PWD}/Merkelypipe.json:/data/Merkelypipe.json \
               merkely/change
 
 
